--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^22.12.0",
     "eslint": "^9.18.0",
     "prettier": "^3.4.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   }
 }
