Update docker-compose to use image and add graceful shutdown in webhook

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   webhook:
-    # build: .
-    image: pal-webhook:latest
+    build: .
     container_name: pal-webhook
     restart: always
     environment:
